clang/test/BSC/Negative/Ownership/Borrow/borrow_in_switch_case/borrow_in_switch_case.cbs
// RUN: %clang_cc1 -verify %s

void use(int *_Borrow);

void test1() {
  int local = 3;
  int a = 3;
  int b = 4;
  int *_Borrow p = &_Mut a;
  int *_Borrow q = &_Mut b;
  for (int i = 0; i < 3; i++) {
    switch(i) {
      case 0:
        p = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
                         // expected-note@-1 {{first mut borrow occurs here}}
        break;
      default:
        q = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
                         // expected-note@-1 {{first mut borrow occurs here}}
    }
  }
  use(p);
  use(q);
}

void test2() {
  int local = 3;
  int a = 3;
  int b = 4;
  int *_Borrow p = &_Mut a;
  int *_Borrow q = &_Mut b;
  for (int i = 0; i < 3; i++) {
    if (i == 0)
      goto tab0;
    goto tab1;
tab0:
    p = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
                     // expected-note@-1 {{first mut borrow occurs here}}
    continue;
tab1:
    q = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
                     // expected-note@-1 {{first mut borrow occurs here}}
  }
  use(p);
  use(q);
}
